--- a/.gitignore
+++ b/.gitignore
@@ -528,3 +528,10 @@ latexmkrc
 
 #
 _region_.*
+
+BufferStockTheory-Problems-and-Solutions.ipynb
+BufferStockTheory-Problems.ipynb
+How-Large-Are-Transitory-And-Permanent-Shocks-Problems-and-Solutions.ipynb
+How-Large-Are-Transitory-And-Permanent-Shocks-Problems.ipynb
+Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems-and-Solutions.ipynb
+Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems.ipynb
