ignore Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems.ipynb Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems-And-Solutions.ipynb

--- a/.gitignore
+++ b/.gitignore
@@ -531,4 +531,6 @@ _region_.*
 
 BufferStockTheory-Problems-and-Solutions.ipynb
 BufferStockTheory-Problems.ipynb
+Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems.ipynb
+Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems-And-Solutions.ipynb
 
