--- a/.gitignore
+++ b/.gitignore
@@ -530,3 +530,5 @@ latexmkrc
 _region_.*
 BufferStockTheory-Problems-And-Solutions.ipynb
 BufferStockTheory-Problems.ipynb
+Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems.ipynb
+Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems-And-Solutions.ipynb
