--- a/.gitignore
+++ b/.gitignore
@@ -529,6 +529,7 @@ latexmkrc
 #
 _region_.*
 BufferStockTheory-Problems-And-Solutions.ipynb
+BufferStockTheory-Problems-and-Solutions.ipynb
 BufferStockTheory-Problems.ipynb
 Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems.ipynb
 Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems-And-Solutions.ipynb
