--- a/.gitignore
+++ b/.gitignore
@@ -530,3 +530,6 @@ latexmkrc
 _region_.*
 
 BufferStockTheory-Problems-And-Solutions.ipynb
+How-Large-Are-Transitory-And-Permanent-Shocks-Problems.ipynb
+Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems.ipynb
+Nondurables-During-Great-Recession-Problems-And-Solutions.ipynb
